Fixes: Real fixes on iphone, including notch

--- a/src/index.css
+++ b/src/index.css
@@ -278,7 +278,7 @@ Iphone: 402px x 873px
 
     .content-pane {
         margin-left: 36px;
-        margin-top: 132px;
+        margin-top: 70px;
 
         max-width: 330px;
         height: 741px;
