--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -44,7 +44,7 @@
     .wrapper-nav {
         gap:12px;
 
-        top: 78px;
+        top: 16px;
         right: 37px;
     }
 
